--- a/BeagleSampleAndroid/app/src/main/res/values/colors.xml
+++ b/BeagleSampleAndroid/app/src/main/res/values/colors.xml
@@ -19,4 +19,6 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="colorOrange">#ff9500</color>
+    <color name="colorBlack">#000000</color>
 </resources>
