--- a/BeagleSampleAndroid/app/src/main/res/values/colors.xml
+++ b/BeagleSampleAndroid/app/src/main/res/values/colors.xml
@@ -16,9 +16,11 @@
   -->
 
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
     <color name="colorOrange">#ff9500</color>
+    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorAccent">#D81B60</color>
+    <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
+    <color name="colorGray">#6F6F6F</color>
 </resources>
