create custom component

--- a/BeagleSampleAndroid/app/src/main/res/values/styles.xml
+++ b/BeagleSampleAndroid/app/src/main/res/values/styles.xml
@@ -39,6 +39,18 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="TextStyleAccountBalance" parent="TextDefault">
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="TextValueStyleAccountBalance" parent="TextDefault">
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
     <style name="TextTitleProfile" parent="TextDefault">
         <item name="android:textColor">@color/colorWhite</item>
         <item name="android:textStyle">bold</item>
