--- a/BeagleSampleAndroid/app/src/main/res/drawable/value_invisible.xml
+++ b/BeagleSampleAndroid/app/src/main/res/drawable/value_invisible.xml
@@ -15,11 +15,12 @@
   ~ limitations under the License.
   -->
 
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@color/colorIti"/>
-            <corners android:bottomLeftRadius="50dp"/>
-        </shape>
-    </item>
-</selector>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <solid
+        android:color="@color/colorWhite"/>
+
+    <corners android:radius="20dp"/>
+
+</shape>
