--- a/BeagleSampleAndroid/app/src/main/res/layout/activity_home.xml
+++ b/BeagleSampleAndroid/app/src/main/res/layout/activity_home.xml
@@ -15,18 +15,23 @@
   ~ limitations under the License.
   -->
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="#313131"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.HomeActivity">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="340dp"
+        android:background="@drawable/background_color_home">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraint_profile"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:background="@drawable/background_color_home"
+        android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -63,37 +68,70 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <FrameLayout
-            android:id="@+id/frame_layout"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="18dp"
-            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="30dp"
+            android:src="@drawable/ic_launcher_foreground"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView3" />
+            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:text="Luis"
+            style="@style/TextTitleProfile"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView"
+            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="@+id/imageView" />
+
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_access_profile"
+            style="@style/TextTitleProfile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="acessar perfil"
+            app:layout_constraintEnd_toEndOf="@+id/tv_name"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/tv_name"
+            app:layout_constraintTop_toBottomOf="@+id/tv_name" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:src="@drawable/ic_right_arrow"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_access_profile"
+            app:layout_constraintStart_toEndOf="@+id/tv_access_profile"
+            app:layout_constraintTop_toTopOf="@+id/tv_access_profile" />
 
         <View
             android:id="@+id/view"
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:layout_marginHorizontal="16dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="10dp"
             android:background="@color/colorDarkBlue"
-            app:layout_constraintTop_toBottomOf="@+id/frame_layout"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_access_profile" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    </FrameLayout>
+
     <FrameLayout
         android:id="@+id/frame_layout_card"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:layout_marginHorizontal="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/constraint_profile"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/constraint_profile"
-        app:layout_constraintTop_toBottomOf="@+id/constraint_profile" />
+        android:layout_marginTop="200dp"
+        android:layout_height="match_parent" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</FrameLayout>
