--- a/BeagleSampleAndroid/app/src/main/res/values/colors.xml
+++ b/BeagleSampleAndroid/app/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
 <resources>
     <color name="colorOrange">#ff9500</color>
     <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimaryDark">#272E39</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
