--- a/BeagleSampleWeb/beagle-sample-web/src/components/card/card.styles.scss
+++ b/BeagleSampleWeb/beagle-sample-web/src/components/card/card.styles.scss
@@ -1,8 +1,7 @@
 .card{
-
   &.container {
     min-width: 30vw;
-    max-width: 85%;
+    max-width: 85vw;
     min-height: 250px;
     overflow: auto;
     display: flex;
@@ -10,5 +9,6 @@
     border-radius: 5px;
     margin: auto;
     box-shadow: 2px 1px 6px 5px rgb(0 0 0 / 10%);
+    background-color: white;
   }
 }
