--- a/BeagleSampleWeb/beagle-sample-web/src/components/header/header.styles.scss
+++ b/BeagleSampleWeb/beagle-sample-web/src/components/header/header.styles.scss
@@ -1,12 +1,26 @@
+@import "../../commons/colors.scss";
+
 .header {
   height: 90px;
-  background-color: #1b2434;
+  background-color: $darkBlue;
   display: flex;
   margin-bottom: 50px;
   box-shadow: 2px 1px 6px 5px rgb(0 0 0 / 20%);
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 120px;
+  padding-right: 120px;
+
   &-icon {
     display: block;
-    margin: auto;
-    width: 40px;
+    height: 60%;
+  }
+
+  &-logout{
+    color: white;
+    cursor: pointer;
+    &:hover{
+      color: $orange;
+    }
   }
 }
