--- a/BeagleSampleWeb/beagle-sample-web/src/components/profile/profile.styles.scss
+++ b/BeagleSampleWeb/beagle-sample-web/src/components/profile/profile.styles.scss
@@ -1,3 +1,5 @@
+@import "../../commons/colors.scss";
+
 .profile {
   &-wrapper {
     display: flex;
@@ -12,6 +14,6 @@
 
   &-email:hover {
     cursor: pointer;
-    color: #fb5f31;
+    color: $orange;
   }
 }
