--- a/BeagleSampleWeb/beagle-sample-web/src/index.css
+++ b/BeagleSampleWeb/beagle-sample-web/src/index.css
@@ -1,6 +1,6 @@
 body {
   color: #1b2434;
-  background-color: #fbfbfb;
+  background-color: #eaeaea;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
