--- a/BeagleSampleWeb/beagle-sample-web/src/pages/login/login.styles.scss
+++ b/BeagleSampleWeb/beagle-sample-web/src/pages/login/login.styles.scss
@@ -1,3 +1,5 @@
+@import "../../commons/colors.scss";
+
 .login {
   &-wrapper {
     color: white;
@@ -5,7 +7,7 @@
     margin: auto;
     margin-top: 120px;
     padding: 50px;
-    background-color: #1b2434;
+    background-color: $darkBlue;
     font-size: 0.8rem;
   }
 
@@ -21,7 +23,7 @@
   color: white;
   border-color: transparent !important;
   margin: 25px auto 25px auto !important;
-  background-color: #fb5f31 !important;
+  background-color: $orange !important;
 }
 
 .text-input {
