--- a/BeagleSampleWeb/beagle-sample-web/src/pages/login/login.styles.scss
+++ b/BeagleSampleWeb/beagle-sample-web/src/pages/login/login.styles.scss
@@ -9,6 +9,7 @@
     padding: 50px;
     background-color: $darkBlue;
     font-size: 0.8rem;
+    box-shadow: 2px 1px 6px 5px rgb(0 0 0 / 20%);
   }
 
   &-welcome{
