--- a/BeagleSampleWeb/beagle-sample-web/src/pages/login/login.styles.scss
+++ b/BeagleSampleWeb/beagle-sample-web/src/pages/login/login.styles.scss
@@ -24,7 +24,7 @@
   color: white;
   border-color: transparent !important;
   margin: 25px auto 25px auto !important;
-  background-color: $orange !important;
+  background: $gradient !important;
 }
 
 .text-input {
