--- a/BeagleSampleAndroid/app/src/main/res/layout/activity_home.xml
+++ b/BeagleSampleAndroid/app/src/main/res/layout/activity_home.xml
@@ -126,12 +126,18 @@
 
     </FrameLayout>
 
+
     <FrameLayout
         android:id="@+id/frame_layout_card"
         android:layout_width="match_parent"
-        android:layout_marginTop="200dp"
-        android:layout_height="match_parent" />
+        android:layout_height="191dp"
+        android:layout_marginTop="200dp" />
 
+    <FrameLayout
+        android:id="@+id/frame_layout_card_b"
+        android:layout_width="match_parent"
+        android:layout_height="308dp"
+        android:layout_marginTop="400dp" />
 
 
 </FrameLayout>
