--- a/BeagleSampleWeb/beagle-sample-web/src/components/card/card.styles.scss
+++ b/BeagleSampleWeb/beagle-sample-web/src/components/card/card.styles.scss
@@ -1,13 +1,12 @@
 .card{
   &.container {
-    min-width: 30vw;
+    width: fit-content;
     max-width: 85vw;
     min-height: 250px;
     overflow: auto;
     display: flex;
-    padding-bottom: 30px;
     border-radius: 5px;
-    margin: auto;
+    margin: 20px auto 20px auto;
     box-shadow: 2px 1px 6px 5px rgb(0 0 0 / 10%);
     background-color: white;
   }
