--- a/BeagleSampleWeb/beagle-sample-web/src/components/banner/banner.styles.scss
+++ b/BeagleSampleWeb/beagle-sample-web/src/components/banner/banner.styles.scss
@@ -1,7 +1,5 @@
 .banner-wrapper {
   width: fit-content;
-  float: left;
   position: relative;
-  left: 145px;
-  margin-bottom: 50px;
+  right: 150px;
 }
