--- a/BeagleSampleWeb/beagle-sample-web/src/pages/main.styles.scss
+++ b/BeagleSampleWeb/beagle-sample-web/src/pages/main.styles.scss
@@ -1,12 +1,18 @@
 @import "../commons/colors.scss";
 
-.paginated-button{
+.paginated-button {
   border: none !important;
-  background-color: rgba(255,255,255,15%) !important;
+  background-color: rgba(255, 255, 255, 15%) !important;
   color: $orange !important;
   min-width: fit-content !important;
 
-  &:hover{
-    background-color: rgba(255,255,255,40%) !important;
+  &:hover {
+    background-color: rgba(255, 255, 255, 40%) !important;
   }
+}
+
+.top-wrapper {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
 }
